# cuda_cmake_template

./: CMakeLists.txt  README.md
src/: example.cpp
src/cuda/: my_kernel.cu  my_kernel.h
